--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
+		"postdev": "surreal start --log debug --user root --pass root memory",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
@@ -31,6 +32,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"surrealdb.js": "^0.5.0"
+		"surrealdb.js": "^0.5.0",
+		"zod": "^3.20.6",
+		"zod-form-data": "^2.0.0"
 	}
 }
