--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 # Private
 API_KEY=""
+
+# DB stuff
 SURREALDB_NS=""
 SURREALDB_DB=""
 SURREALDB_USER=""
 SURREALDB_PASS=""
 SURREALDB_URL=""
+
+# JWT stuff
+JWT_ACCESS_TOKEN_SECRET=""
+JWT_REFRESH_TOKEN_SECRET=""
+JWT_ACCESS_TOKEN_EXPIRES_IN=0
+JWT_REFRESH_TOKEN_EXPIRES_IN=0
 
 # Public
 PUBLIC_API_KEY=""
