--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
+		"@types/passport-jwt": "^3.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -32,6 +33,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"argon2": "^0.30.3",
+		"jsonwebtoken": "^9.0.0",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.1",
 		"surrealdb.js": "^0.5.0",
 		"zod": "^3.20.6",
 		"zod-form-data": "^2.0.0"
