--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,9 @@ JWT_REFRESH_TOKEN_SECRET=""
 JWT_ACCESS_TOKEN_EXPIRES_IN=0
 JWT_REFRESH_TOKEN_EXPIRES_IN=0
 
+# MAIL stuff
+MAIL_USER=""
+MAIL_PASS=""
+
 # Public
 PUBLIC_API_KEY=""
