--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@tanstack/svelte-query": "^4.26.1",
 		"argon2": "^0.30.3",
+		"axios": "^1.3.4",
 		"cirql": "^0.6.6",
 		"jsonwebtoken": "^9.0.0",
 		"nanoid": "^4.0.1",
