--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ MAIL_PASS=""
 PUBLIC_ADMIN_API_URL=""
 PUBLIC_API_KEY=""
 
-PUBLIC_LOG_EMOJI = true;
-PUBLIC_LOG_TIME = true;
-PUBLIC_LOG_REQUEST = true;
-PUBLIC_LOG_LEVEL = 'all';
+PUBLIC_LOG_EMOJI=true
+PUBLIC_LOG_TIME=true
+PUBLIC_LOG_REQUEST=true
+PUBLIC_LOG_LEVEL="all"
