--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,14 @@
 	"endOfLine": "crlf",
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
+	"plugins": [
+		"prettier-plugin-svelte"
+	],
+	"pluginSearchDirs": [
+		"."
+	],
 	"overrides": [
 		{
 			"files": "*.svelte",
