--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
-	// "exclude": ["**/node_modules/*"],
+	"exclude": ["**/node_modules/*"],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
