--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tanstack/svelte-query": "^4.26.1",
+		"@tanstack/svelte-table": "^8.9.1",
 		"argon2": "^0.30.3",
 		"axios": "^1.3.4",
 		"cirql": "^0.6.6",
