WIP: file upload p2

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
+		"@types/node": "^20.2.1",
 		"@types/nodemailer": "^6.4.7",
 		"@types/passport-jwt": "^3.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -45,6 +46,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.335.0",
 		"@tanstack/svelte-query": "^4.26.1",
 		"@tanstack/svelte-table": "^8.9.1",
 		"argon2": "^0.30.3",
