--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ SURREALDB_USER=""
 SURREALDB_PASS=""
 SURREALDB_URL=""
 
+# AWS stuff
+AWS_BUCKET_NAME=""
+AWS_BUCKET_REGION=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+
 # JWT stuff
 JWT_ACCESS_TOKEN_SECRET=""
 JWT_REFRESH_TOKEN_SECRET=""
