--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	"type": "module",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.335.0",
+		"@aws-sdk/s3-request-presigner": "^3.335.0",
 		"@tanstack/svelte-query": "^4.26.1",
 		"@tanstack/svelte-table": "^8.9.1",
 		"argon2": "^0.30.3",
